--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       </div>
 
       <ul>
-        <a href="">
+        <a href="/index.html">
           <li>Home</li>
         </a>
-        <a href="">
+        <a href="/contact.html">
           <li>Contact</li>
         </a>
-        <a href="">
+        <a href="/about.html">
           <li>About</li>
         </a>
       </ul>
