--- a/about.html
+++ b/about.html
@@ -20,13 +20,13 @@
         </div>
   
         <ul>
-          <a href="/index.html">
+          <a href="/BeerProject/index.html">
             <li>Home</li>
           </a>
-          <a href="/contact.html">
+          <a href="/BeerProject/contact.html">
             <li>Contact</li>
           </a>
-          <a href="/about.html">
+          <a href="/BeerProject/about.html">
             <li>About</li>
           </a>
         </ul>
